# arduino-vibe-ide

./: .gitignore  CHANGELOG.md  README.md  SETUP.md  config.yaml  pyproject.toml  requirements.txt
examples/: README.md  blink.ino  esp32-wifi-webserver.ino  esp8266-iot-mqtt.ino  pico-led-fade.ino  sensor-read.ino
ide-integration/: EXAMPLE_PROMPTS.md  README.md  claude-settings.json  mcp-claude.json  mcp-windsurf.json
libraries/AgentCore/: AgentCore.ino
projects/test_leds/: project.json
projects/test_leds/sketch/: test_leds.ino
src/: __init__.py  agent_bridge.py  agent_sketch_builder.py  bluetooth_upload.py  cli.py  compiler.py  config_profiles.py  devices.py  project.py  serial_plotter.py  serial_terminal.py  server.py  sketch_generator.py
templates/: __init__.py
tests/: conftest.py  test_compiler.py  test_config_profiles.py  test_devices.py  test_project.py  test_serial_plotter.py  test_serial_terminal.py
