[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arduino-vibe-ide"
version = "0.1"
description = "AI-powered Arduino IDE MCP server and CLI wizard for hardware vibe coding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arduino Vibe IDE", email = "vibe@arduino-ide.local"},
]
dependencies = [
    "mcp>=1.26.0",
    "click>=8.3.1",
    "rich>=14.3.3",
    "pyserial>=3.5",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
arduino-vibe = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
